src/test/ui/consts/issue-36163.stderr
error[E0391]: cycle detected when evaluating constant for MIR opt/codegen `Foo::B::{constant#0}`
  --> $DIR/issue-36163.rs:4:9
   |
LL |     B = A,
   |         ^
   |
note: ...which requires simplifying constant for the type system `Foo::B::{constant#0}`...
  --> $DIR/issue-36163.rs:4:9
   |
LL |     B = A,
   |         ^
note: ...which requires const-evaluating + checking `Foo::B::{constant#0}`...
  --> $DIR/issue-36163.rs:4:9
   |
LL |     B = A,
   |         ^
<<<<<<< HEAD
   = note: ...which requires normalizing `A`...
note: ...which requires simplifying constant for the type system `A`...
  --> $DIR/issue-36163.rs:1:1
   |
LL | const A: isize = Foo::B as isize;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires simplifying constant for the type system `A`...
||||||| parent of ab70bbeec72... Use ValTree in all type level constants
note: ...which requires simplifying constant for the type system `A`...
=======
note: ...which requires evaluating constant for MIR opt/codegen `A`...
>>>>>>> ab70bbeec72... Use ValTree in all type level constants
  --> $DIR/issue-36163.rs:1:1
   |
LL | const A: isize = Foo::B as isize;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires const-evaluating + checking `A`...
  --> $DIR/issue-36163.rs:1:1
   |
LL | const A: isize = Foo::B as isize;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<<<<<<< HEAD
   = note: ...which requires normalizing `A`...
   = note: ...which again requires simplifying constant for the type system `Foo::B::{constant#0}`, completing the cycle
note: cycle used when collecting item types in top-level module
  --> $DIR/issue-36163.rs:1:1
||||||| parent of ab70bbeec72... Use ValTree in all type level constants
   = note: ...which again requires simplifying constant for the type system `Foo::B::{constant#0}`, completing the cycle
note: cycle used when simplifying constant for the type system `Foo::B::{constant#0}`
  --> $DIR/issue-36163.rs:4:9
=======
   = note: ...which again requires evaluating constant for MIR opt/codegen `Foo::B::{constant#0}`, completing the cycle
note: cycle used when evaluating constant for MIR opt/codegen `Foo::B::{constant#0}`
  --> $DIR/issue-36163.rs:4:9
>>>>>>> ab70bbeec72... Use ValTree in all type level constants
   |
LL | / const A: isize = Foo::B as isize;
LL | |
LL | | enum Foo {
LL | |     B = A,
LL | | }
LL | |
LL | | fn main() {}
   | |____________^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
